<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bit_collec"
            android:icon="@drawable/ic_bit_collec"
            android:title="@string/bit_collec" />
        <item
            android:id="@+id/nav_army_creator"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/army_creator" />
        <item
            android:id="@+id/nav_wargaming"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/wargaming" />
        <item
            android:id="@+id/nav_hobbying"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/hobbying" />
        <item
            android:id="@+id/nav_news_feed"
            android:icon="@drawable/ic_news_feed"
            android:title="@string/news_feed" />
    </group>

    <item android:title="Application">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
