<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Wargaming"
    tools:showIn="@layout/activity_wargaming">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/wargaming_event_finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight=".25"
            android:text="@string/wargaming_event_finder"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/wargaming_local_opponent_Finder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight=".25"
            android:text="@string/wargaming_local_opponent_Finder"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/wargaming_played_game_stat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight=".25"
            android:text="@string/wargaming_played_game_stat"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>